--- a/kubernetes/helmfile.d/03-hardware.gotmpl.yaml
+++ b/kubernetes/helmfile.d/03-hardware.gotmpl.yaml
@@ -3,8 +3,6 @@ bases:
   - ../defaults.yaml
 
 repositories:
-  - name: nfd
-    url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
   - name: nvidia
     url: https://nvidia.github.io/k8s-device-plugin
   - name: gpu-helm-charts
@@ -13,17 +11,10 @@ repositories:
     url: http://kwasm.sh/kwasm-operator/
 
 releases:
-  - name: node-feature-discovery
-    chart: nfd/node-feature-discovery
-    version: 0.17.1
-    namespace: kube-system
-
   - name: nvidia-device-plugin
     namespace: kube-system
     chart: nvidia/nvidia-device-plugin
-    version: 0.16.2
-    needs:
-      - kube-system/node-feature-discovery
+    version: 0.17.1
     values:
       - runtimeClassName: nvidia
       - devicePlugin:
@@ -31,7 +22,17 @@ releases:
         gfd:
           enabled: true
         nfd:
-          enabled: false
+          enabled: true
+      # - config:
+      #     map:
+      #       default: |-
+      #         version: v1
+      #         sharing:
+      #           timeSlicing:
+      #             renameByDefault: false
+      #             resources:
+      #               - name: nvidia.com/gpu
+      #                 replicas: 4
     hooks:
       - events: ["presync"]
         showlogs: true
@@ -44,27 +45,33 @@ releases:
   - name: dcgm-exporter
     chart: gpu-helm-charts/dcgm-exporter
     namespace: kube-system
+    needs:
+      - kube-system/nvidia-device-plugin
     values:
       - nodeSelector:
           nvidia.com/gpu.present: 'true'
+        runtimeClassName: nvidia
+        hostNetwork: true
+        resources:
+          limits:
+            nvidia.com/gpu: 1
         serviceMonitor:
-          enabled: true
+          interval: 15s
+          honorLabels: true
         service:
           enable: true
           type: LoadBalancer
           annotations:
             external-dns.alpha.kubernetes.io/hostname: dcgm.homelab.internal
-        extraEnv:
-          - name: DCGM_EXPORTER_COLLECTORS
-            value: /etc/dcgm-exporter/dcp-metrics-included.csv
-          - name: NVIDIA_VISIBLE_DEVICES
-            value: all
-          - name: NVIDIA_MIG_CONFIG_DEVICES
-            value: all
-          - name: NVIDIA_MIG_MONITOR_DEVICES
-            value: all
-          - name: NVIDIA_DRIVER_CAPABILITIES
-            value: all
+        # extraEnv:
+        #   - name: NVIDIA_VISIBLE_DEVICES
+        #     value: all
+        #   - name: NVIDIA_MIG_CONFIG_DEVICES
+        #     value: all
+        #   - name: NVIDIA_MIG_MONITOR_DEVICES
+        #     value: all
+        #   - name: NVIDIA_DRIVER_CAPABILITIES
+        #     value: all
 
   - name: kwasm-operator
     chart: kwasm/kwasm-operator
@@ -73,6 +80,13 @@ releases:
     values:
       - kwasmOperator:
           installerImage: ghcr.io/spinframework/containerd-shim-spin/node-installer:v0.19.0
+
+  - name: spin-operator
+    chart: oci://ghcr.io/spinframework/charts/spin-operator
+    version: 0.5.0
+    namespace: kube-system
+    needs:
+      - kube-system/kwasm-operator
     hooks:
       - events: ["presync"]
         showlogs: true
@@ -83,14 +97,6 @@ releases:
           - https://github.com/spinframework/spin-operator/releases/download/v0.5.0/spin-operator.crds.yaml
           - -f
           - https://github.com/spinframework/spin-operator/releases/download/v0.5.0/spin-operator.runtime-class.yaml
-
-  - name: spin-operator
-    chart: oci://ghcr.io/spinframework/charts/spin-operator
-    version: 0.5.0
-    namespace: kube-system
-    needs:
-      - kube-system/kwasm-operator
-    hooks:
       - events: ["postsync"]
         showlogs: true
         command: "bash"
