--- a/kubernetes/charts/homelab-gateway/values.yaml
+++ b/kubernetes/charts/homelab-gateway/values.yaml
@@ -1,8 +1,8 @@
 ---
 gateway-helm:
   config:
-    backendTlsConfig:
-      clientCertificateRef: homelab-tls
+    # backendTlsConfig:
+    #   clientCertificateRef: homelab-tls
     envoyGateway:
       extensionApis:
         enableBackend: true
