--- a/tf_modules/talos_cluster/patches/kubelet.yaml
+++ b/tf_modules/talos_cluster/patches/kubelet.yaml
@@ -1,8 +1,8 @@
 ---
 machine:
   kubelet:
-    extraArgs:
-      rotate-server-certificates: true
+    # extraArgs:
+    #   rotate-server-certificates: true
     nodeIP:
       validSubnets:
         - 192.168.1.0/24
