--- a/platform/observability/prometheus/prometheus.yml
+++ b/platform/observability/prometheus/prometheus.yml
@@ -11,5 +11,13 @@ global:
 
 scrape_configs:
   - job_name: 'dcgm'
+    scrape_interval: 15s
     static_configs:
       - targets: ['dcgm.homelab.internal:9400']
+
+  - job_name: 'hubble'
+    scheme: https
+    static_configs:
+      - targets: ['hubble.homelab.internal']
+    tls_config:
+      insecure_skip_verify: true
