add seccomp profile

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ kubernetes/apps/**/charts
 kubernetes/charts/homelab-gateway/charts
 platform/ai/k8s/integrations/openwebui/charts
 platform/ai/k8s/llm-providers/ollama/charts
+platform/*/*/charts/*
 
 .DS_Store
 .pytest_cache
