--- a/kubernetes/charts/homelab-gateway/values.yaml
+++ b/kubernetes/charts/homelab-gateway/values.yaml
@@ -6,3 +6,7 @@ gateway-helm:
     envoyGateway:
       extensionApis:
         enableBackend: true
+
+ai-gateway-helm:
+  controller:
+    enableInferenceExtension: true
