--- a/platform/ai/k8s/llm-providers/openai/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/openai/kustomization.yaml
@@ -4,4 +4,5 @@ kind: Kustomization
 resources:
   - backend.yaml
   - backend-service.yaml
+  - backend-tls-policy.yaml
   - backend-security-policy.yaml
