--- a/kubernetes/Taskfile.yml
+++ b/kubernetes/Taskfile.yml
@@ -4,6 +4,8 @@ version: 3
 includes:
   talos:
     taskfile: ".taskfiles/talos/Taskfile.yaml"
+  debug:
+    taskfile: ".taskfiles/debug/Taskfile.yaml"
 
 vars:
   TERRAFORM: tofu -chdir=terraform
@@ -74,7 +76,7 @@ tasks:
     dir: kubernetes
     cmds:
       - task: talos:reboot-node
-  
+
   cluster-health:
     dir: kubernetes
     cmds:
@@ -84,4 +86,3 @@ tasks:
           sleep 10
         done
         echo "Kubernetes cluster is healthy!"
-  
