--- a/kubernetes/charts/homelab-gateway/templates/gateway.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/gateway.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/hostname: homelab.internal
 spec:
-  gatewayClassName: cilium
+  gatewayClassName: envoy
   listeners:
   - name: http
     protocol: HTTP
