--- a/platform/ai/k8s/airoutes.yaml
+++ b/platform/ai/k8s/airoutes.yaml
@@ -16,16 +16,9 @@ spec:
     - headers:
       - type: Exact
         name: x-ai-eg-model
-        value: llama3:latest
+        value: gpt-4o-mini
     backendRefs:
-    - name: ollama-backend-service
-  # - matches:
-  #   - headers:
-  #     - type: Exact
-  #       name: x-ai-eg-model
-  #       value: gpt-4o-mini
-  #   backendRefs:
-  #   - name: openai-backend-service
+    - name: openai-backend-service
   # - matches:
   #   - headers:
   #     - type: Exact
