--- a/platform/automation/k8s/n8n/deployment.yaml
+++ b/platform/automation/k8s/n8n/deployment.yaml
@@ -12,6 +12,8 @@ spec:
   selector:
     matchLabels:
       app: n8n
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
@@ -24,29 +26,9 @@ spec:
         fsGroup: 1000
       nodeSelector:
         kubernetes.io/hostname: mlops-work-01
-      initContainers:
-        - name: n8n-import
-          image: ghcr.io/n8n-io/n8n:1.76.0
-          command: ["/bin/sh", "-c"]
-          args:
-            - |
-              n8n import:credentials --separate --input=/backup/credentials
-              n8n import:workflow --separate --input=/backup/workflows
-          securityContext:
-            runAsNonRoot: true
-            allowPrivilegeEscalation: false
-            capabilities:
-              drop: ["ALL"]
-            seccompProfile:
-              type: RuntimeDefault
-          volumeMounts:
-            - name: credentials
-              mountPath: /backup/credentials
-            - name: workflows
-              mountPath: /backup/workflow
       containers:
         - name: n8n
-          image: ghcr.io/n8n-io/n8n:1.76.0
+          image: ghcr.io/n8n-io/n8n:latest
           ports:
             - containerPort: 5678
           securityContext:
@@ -64,6 +46,8 @@ spec:
               cpu: 550m
               memory: 768Mi
           env:
+            - name: N8N_METRICS
+              value: "true"
             - name: N8N_SECURE_COOKIE
               value: "false"
             - name: N8N_HOST
@@ -80,7 +64,11 @@ spec:
               value: "true"
             - name: N8N_VERSION_NOTIFICATIONS_ENABLED
               value: "false"
-            - name: N8N_EXTERNAL_STORAGE_HOST
+            - name: N8N_AVAILABLE_BINARY_DATA_MODES
+              value: s3,filesystem
+            - name: N8N_DEFAULT_BINARY_DATA_MODES
+              value: s3
+            - name: N8N_EXTERNAL_STORAGE_S3_HOST
               value: "s3.us-east-1.amazonaws.com"
             - name: N8N_EXTERNAL_STORAGE_S3_BUCKET_NAME
               valueFrom:
@@ -110,6 +98,8 @@ spec:
               mountPath: /backup/workflows
             - name: n8n-storage
               mountPath: /home/node/.n8n
+            - name: shared-data
+              mountPath: /data/shared
       volumes:
         - name: credentials
           configMap:
@@ -123,3 +113,6 @@ spec:
         - name: n8n-storage
           persistentVolumeClaim:
             claimName: n8n-storage-pvc
+        - name: shared-data
+          persistentVolumeClaim:
+            claimName: n8n-storage-shared-pvc
