connect to grafana

--- a/platform/observability/prometheus/configs/prometheus.yaml
+++ b/platform/observability/prometheus/configs/prometheus.yaml
@@ -1,9 +1,20 @@
 ---
 prometheus:
-  additionalScrapeConfigs:
-    global:
-      scrape_interval: 3s
-    scrape_configs:
+  enabled: true
+  monitor:
+    enabled: false
+  agentMode: false
+  nodeSelector:
+    kubernetes.io/hostname: mlops-work-01
+  prometheusSpec:
+    nodeSelector:
+      kubernetes.io/hostname: mlops-work-01
+    remoteWrite:
+      - url: http://192.168.2.10:3000
+    additionalScrapeConfigs:
+      - job_name: 'dcgm'
+        static_configs:
+          - targets: ['dcgm']
       - job_name: 'kubernetes-endpoints'
         scrape_interval: 30s
         kubernetes_sd_configs:
