--- a/platform/observability/prometheus/configs/prometheus-operator.yaml
+++ b/platform/observability/prometheus/configs/prometheus-operator.yaml
@@ -1,6 +1,8 @@
 ---
 prometheusConfigReloader:
   enabled: true
+  selfMonitor:
+    enabled: false
   admissionWebhooks:
     enabled: false
   tls:
