--- a/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
+++ b/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
@@ -7,8 +7,8 @@ repositories:
     url: https://helm.cilium.io
   - name: coredns
     url: https://coredns.github.io/helm
-  # - name: csi-driver-nfs
-  #   url: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
+  - name: nfs-subdir-external-provisioner
+    url: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner/
 
 releases:
   - name: prometheus-operator-crds
@@ -45,15 +45,14 @@ releases:
     needs:
       - kube-system/cilium
 
-  # - name: csi-driver-nfs
-  #   namespace: kube-system
-  #   chart: csi-driver-nfs/csi-driver-nfs
-  #   version: 4.11.0
-    # hooks:
-    #   - events: ["postsync"]
-    #     showlogs: true
-    #     command: "bash"
-    #     args:
-    #       - -c
-    #       - |
-    #         kustomize build --enable-exec --enable-helm ../apps/storage/nfs | kubectl apply -f -
+  - name: nfs-subdir-external-provisioner
+    namespace: kube-system
+    chart: nfs-subdir-external-provisioner/nfs-subdir-external-provisioner
+    version: 4.0.18
+    values:
+      - nfs:
+          server: unas.internal
+          path: /var/nfs/shared/ai_storage
+        storageClass:
+          name: nfs-ephemeral
+          defaultClass: false
