--- a/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ollama-pvc.yaml
   - ollama-httproute.yaml
 helmCharts:
   - name: ollama
@@ -20,16 +21,11 @@ helmCharts:
             - qwen2.5-coder
             - firefunction-v2
         insecure: true
-
       runtimeClassName: nvidia
       nodeSelector:
         nvidia.com/gpu.present: "true"
       persistentVolume:
-        enabled: true
-        storageClass: nfs-ephemeral
-        accessModes:
-          - ReadWriteOnce
-        size: 200Gi
+        existingClaim: ollama-pvc
       requests:
         cpu: 60m
         memory: 256Mi
