use layer 2 announcement for prometheus lb

--- a/platform/Taskfile.yml
+++ b/platform/Taskfile.yml
@@ -16,6 +16,7 @@ tasks:
     cmds:
       - task: ai:deploy
       - task: automation:deploy
+      - task: observability:deploy
       - kubectl rollout restart deployment reflector -n kube-system
 
   destroy:
