--- a/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
@@ -25,6 +25,7 @@ helmCharts:
       nodeSelector:
         nvidia.com/gpu.present: "true"
       persistentVolume:
+        enabled: true
         existingClaim: ollama-pvc
       requests:
         cpu: 60m
