--- a/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
+++ b/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
@@ -14,7 +14,7 @@ releases:
   - name: prometheus-operator-crds
     namespace: observability
     chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
-    version: 17.0.2 # 19.0.1
+    version: 17.0.2
     createNamespace: true
 
   - name: cilium
@@ -24,8 +24,6 @@ releases:
     createNamespace: true
     values:
       - ../apps/networking/cilium/values.yaml
-    needs:
-      - observability/prometheus-operator-crds
     hooks:
       - events: ["postsync"]
         showlogs: true
