Setup GPU Storage and telemetry capabilities (#33)
* save branch

* fix gateway

* setup ollama independent from openwebui

* add unifi badge

* remove nvidia resource frome xporter

* add seccomp profile

* connect to grafana

* setup nfs csi

* upgrade cilinium and add nfs storage for storage

* use layer 2 announcement for prometheus lb

* rm dependency to prometheus crds in bootstrap phase for cilinium

--- a/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
+++ b/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
@@ -7,8 +7,8 @@ repositories:
     url: https://helm.cilium.io
   - name: coredns
     url: https://coredns.github.io/helm
-  # - name: csi-driver-nfs
-  #   url: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
+  - name: csi-driver-nfs
+    url: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
 
 releases:
   - name: prometheus-operator-crds
@@ -20,12 +20,10 @@ releases:
   - name: cilium
     namespace: kube-system
     chart: cilium/cilium
-    version: 1.17.2
+    version: 1.17.3
     createNamespace: true
     values:
       - ../apps/networking/cilium/values.yaml
-    needs:
-      - observability/prometheus-operator-crds
     hooks:
       - events: ["postsync"]
         showlogs: true
@@ -45,15 +43,17 @@ releases:
     needs:
       - kube-system/cilium
 
-  # - name: csi-driver-nfs
-  #   namespace: kube-system
-  #   chart: csi-driver-nfs/csi-driver-nfs
-  #   version: 4.11.0
-    # hooks:
-    #   - events: ["postsync"]
-    #     showlogs: true
-    #     command: "bash"
-    #     args:
-    #       - -c
-    #       - |
-    #         kustomize build --enable-exec --enable-helm ../apps/storage/nfs | kubectl apply -f -
+  - name: csi-driver-nfs
+    namespace: kube-system
+    chart: csi-driver-nfs/csi-driver-nfs
+    version: 4.11.0
+    values:
+      - enableFSGroupPolicy: true
+    hooks:
+      - events: ["postsync"]
+        showlogs: true
+        command: "bash"
+        args:
+          - -c
+          - |
+            kustomize build --enable-exec --enable-helm ../apps/storage/nfs | kubectl apply -f -
