--- a/platform/ai/k8s/llm-providers/openai/secret.enc.yaml
+++ b/platform/ai/k8s/llm-providers/openai/secret.enc.yaml
@@ -1,23 +1,24 @@
-apiVersion: ENC[AES256_GCM,data:LO8=,iv:kxtXhitE5CVQm6maQVpHD+ckieSvknRTV3/ethljpAE=,tag:Bmk6CyYkoVvQ8BKBB0jQuw==,type:str]
-kind: ENC[AES256_GCM,data:VnZJgrL2,iv:tlM/z/jIDeLuxKLXTCyXZrqwqOhyUQBqdmKWm+fbHSw=,tag:f2pbZcOvwuwxNKV3WsfTOA==,type:str]
+apiVersion: ENC[AES256_GCM,data:GiM=,iv:2luCaVzuvzmnu4IMviqqK2ZQCwHgGQOxt74P3Ml0ftw=,tag:VTr0lawj9HnBmITQoYSjdQ==,type:str]
+kind: ENC[AES256_GCM,data:q7oFj+Ns,iv:RPNgNisnK0sCnD1xaHSynull/ilhimy5vRQxUfCLGOw=,tag:cE7vAD/+3ygwAM1eV8PSog==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:l2ZKZHfGcLQyYVuxfdt8z1WQqwU1,iv:4a2z7Ixb2Sw2h8pus65Xvehbu8fMxnxo/0eymF0QzOs=,tag:UKCc3Svmlgvq6ITYnY2uPA==,type:str]
-    namespace: ENC[AES256_GCM,data:hIY=,iv:EykeQaAaxh6ukae80s+N75W/MHugrBy9cIJbRT0SjOY=,tag:8GtkpVV0Fz8j4cWGxGnZXA==,type:str]
-type: ENC[AES256_GCM,data:2Y7nUuTE,iv:uCDZTcHmErs7izT0dN/uYZjbdg8DUJJ/WjShHkw8OUQ=,tag:PV8o/0qj5yJfUYJu9yyfuw==,type:str]
+    name: ENC[AES256_GCM,data:WtveoaZtUupDKqqAirdwlo3yZE1d,iv:Nchu/MDWsinVNIoTH3LGHvbeD1HEI+E80QbKVzNd4ts=,tag:RVcoAyTgz/aPxbo8W33xrQ==,type:str]
+    namespace: ENC[AES256_GCM,data:SVQ=,iv:RnMdnaual0BaxtgfUobQeUuX7Siut7bThlhA6W+6WZE=,tag:JX/w1Xiw9rUg+GE1b+cG2A==,type:str]
+type: ENC[AES256_GCM,data:oUvWiDKA,iv:bvj8abT9xlVxMxsKZpFhFC8qOgm1/u1RuRVNMJnZ00c=,tag:hvcppNa78QAwSiVjWSG0oQ==,type:str]
 stringData:
-    apiKey: ENC[AES256_GCM,data:7E9IlWsqGnVlirnXbP7ZyVeVXlaAlz0V7/CZwV7gVcrZIWBOYb9VMZy1rghxhVJf/4pL+ShaSTTPdDK1Jq6b5zE61zMWUdSKIm4o1NT+RLu174NTaL15Wbioxk8FRY1YnS4YaG4Sc0KToBMYAYkQXoHz6ToOvwJivp/yj/baweJLKFbJXXI23noOWMfXiC76oOFj3YrhNdbRhtyHk7f6g/U5dEE=,iv:F+eF2WX5oD3N0a7XukxtSUhjutTq1E8cnqjvgUNvtn4=,tag:2QSc5m9a4A+cHIww9sDOxA==,type:str]
+    apiKey: ENC[AES256_GCM,data:ePd8caVBxdgzyj6itI+fDEiweusl6K/f8hCk8WJMHuqpjXq5djHV9hMOWwmjO3yx68yGgpJ39JRmN9BcXCq2jU7IEyWtgTJkmt279Z/c40O0SW46NqyOldJgLCwUUejQz4+oJ/2J5RuSnN6rjrgOhvNOkdeUkraZ734ySkihjVS/cczpgLafDjUtS2EsS1GhzaNa/nqPG2lM20yu/jn/THgSO0E=,iv:gVA3VOPz+noG6CigXuKwmjiDKEzhzbOHtv2notw0CXs=,tag:S3dCNC61UU2uU86oweLcgA==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-04-02T17:04:21Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAF5CeyqGMGDUbLy5vLYnFIVAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMiWZF4iqWeELuI7gVAgEQgDu11Dx5HV7ezbL9ZNjX/OHug2UJqtDhvHb6nxHLjs8ZH7BIlrhHugH48fMfv56bMirTAqvdCRHp4winxA==
+          created_at: "2025-04-17T17:54:40Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAFJ4yXrXhHmKmR5g6eYszdMAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMmoFU3BWauDw9RtM6AgEQgDsoGhpnZO/QVTxbdJyfJWDLjOnbBA2cNNTqOd+OoBobKTzuGcMgDZ/LG3kfF03QepQykegqzJmINAbRQQ==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-04-02T17:04:21Z"
-    mac: ENC[AES256_GCM,data:soEGL2W2OvjANb+XzynBx/3zcwdWh+84A6w6XpYpbE8s3Qhxt+od20IcAxPaUTqEAzBJQGac+XYb7NKhbHDjNRvNUKMLdZN2UcH6jikGuFb5fdJS156Rk4OJPw3oS9UFuTxpJzQ9lngjLmQt9tFiCeH7VLsw8WMsJfx1S5NAdGA=,iv:EvPvQDasmkdPNPYC8uha/OjSdkGPiGYhwiT0lgKysVU=,tag:hRg8vfGoSlVHD8o1UtNr9w==,type:str]
+    lastmodified: "2025-04-17T17:54:40Z"
+    mac: ENC[AES256_GCM,data:5HKComKj4fyMrDzHgEQDQUfQjksDBnpyHZVM8ksQEANNmJ0Uv0wd3rsQjpV65TPgn1Pjo1DMo4Eqdf81/JBLffMAM4jDA8WrcoEDcP1ZsW2lU8FGHYIzwxrlUAiNqF6vJoLrWykLX/yHo83+AxFdAylAN0fjKpqbxmGhlb3yrY0=,iv:Hxu/FjsQtGocgigv7KnuMqCOYKmiFoaTHTxTmZ7AZQY=,tag:i9+u0OGBgCcVUhQV7qtu7w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
+
