--- a/platform/observability/grafana/datasources/datasource.yaml
+++ b/platform/observability/grafana/datasources/datasource.yaml
@@ -3,4 +3,6 @@ datasources:
   - name: Prometheus
     type: prometheus
     access: proxy
-    url: http://prometheus:9090
+    url: http://prometheus.homelab.internal
+    jsonData:
+      tlsSkipVerify: true
