--- a/platform/Taskfile.yml
+++ b/platform/Taskfile.yml
@@ -6,6 +6,8 @@ includes:
     taskfile: ai/Taskfile.yml
   automation:
     taskfile: automation/Taskfile.yml
+  observability:
+    taskfile: observability/Taskfile.yml
 
 tasks:
   deploy:
@@ -14,6 +16,7 @@ tasks:
     cmds:
       - task: ai:deploy
       - task: automation:deploy
+      - task: observability:deploy
       - kubectl rollout restart deployment reflector -n kube-system
 
   destroy:
