--- a/platform/ai/k8s/integrations/openwebui/values.yaml
+++ b/platform/ai/k8s/integrations/openwebui/values.yaml
@@ -5,6 +5,9 @@ ollama:
 persistence:
   enabled: true
 
+service:
+  port: 80
+
 ollamaUrls: ["http://ollama.ai.svc.cluster.local:11434"]
 
 extraEnvVars:
