--- a/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
@@ -21,6 +21,7 @@ helmCharts:
             - qwen2.5-coder
             - firefunction-v2
         insecure: true
+      hostNetwork: true
       runtimeClassName: nvidia
       nodeSelector:
         nvidia.com/gpu.present: "true"
