--- a/kubernetes/charts/homelab-gateway/templates/gateway.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/gateway.yaml
@@ -12,6 +12,7 @@ spec:
   - name: http
     protocol: HTTP
     port: 80
+    hostname: "*.homelab.internal"
     allowedRoutes:
       namespaces:
         from: All
@@ -20,6 +21,7 @@ spec:
     protocol: HTTPS
     hostname: "*.homelab.internal"
     tls:
+      mode: Terminate
       certificateRefs:
       - kind: Secret
         group: ""
