--- a/platform/ai/k8s/integrations/openwebui/kustomization.yaml
+++ b/platform/ai/k8s/integrations/openwebui/kustomization.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - openwebui-httproute.yaml
+  - httproute.yaml
 helmCharts:
   - name: open-webui
     repo: https://helm.openwebui.com/
     version: 6.0.0
     namespace: ai
     releaseName: open-webui
-    valuesFile: openwebui-values.yaml
+    valuesFile: values.yaml
