--- a/kubernetes/charts/homelab-gateway/templates/gateway.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/gateway.yaml
@@ -12,7 +12,7 @@ spec:
   - name: http
     protocol: HTTP
     port: 80
-    hostname: "*.homelab.internal"
+    # hostname: "*.homelab.internal"
     allowedRoutes:
       namespaces:
         from: All
