--- a/platform/ai/k8s/gateway.yaml
+++ b/platform/ai/k8s/gateway.yaml
@@ -4,12 +4,12 @@ kind: Gateway
 metadata:
   name: ai-gateway
   namespace: ai
-  # annotations:
-  #   cert-manager.io/cluster-issuer: internal-ca-cluster-issuer
-  #   external-dns.alpha.kubernetes.io/hostname: ai.homelab.internal
 spec:
   gatewayClassName: envoy
   listeners:
   - name: http
     protocol: HTTP
     port: 80
+    allowedRoutes:
+      namespaces:
+        from: Same
